--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                     <input type="text" class="search__form-input" id="searchText"
                            placeholder="Введи название...">
                 </label>
+                <button class="search__btn" type="submit">
+                    <i class="fa fa-search" aria-hidden="true"></i>
+                </button>
             </form>
         </section>
     </div>
@@ -99,7 +102,7 @@
         <section class="tv-shows">
             <h3 class="tv-shows__head">Результат поиска</h3>
             <ul class="tv-shows__list">
-                
+
             </ul>
         </section>
 
