--- a/index.html
+++ b/index.html
@@ -56,6 +56,25 @@
         </li>
         <li>
             <a href="#" class="dropdown">
+                <i class="fas fa-fire-alt" aria-hidden="true"></i>
+                <span>В ТРЕНДЕ</span>
+            </a>
+            <ul class="dropdown-list">
+                <li>
+                    <a href="#" id="today-trend">
+                        <span>Сегодня</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" id="week-trend">
+                        <span>За неделю</span>
+                    </a>
+                </li>
+
+            </ul>
+        </li>
+        <li>
+            <a href="#" class="dropdown">
                 <i class="fa fa-tv" aria-hidden="true"></i>
                 <span>НОВЫЕ ЭПИЗОДЫ</span>
             </a>
@@ -100,8 +119,11 @@
 <main>
     <div class="container">
         <section class="tv-shows">
-            <h3 class="tv-shows__head">Результат поиска</h3>
+            <h3 class="tv-shows__head">Начните поиск сериалов</h3>
             <ul class="tv-shows__list">
+
+            </ul>
+            <ul class="tv-shows__pagination pagination">
 
             </ul>
         </section>
